--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,21 @@ dist.jar=${dist.dir}/gestion-reclamations-reponses.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.core-3.0.0.jar=..\\..\\Downloads\\jar_files\\core-3.0.0.jar
+file.reference.javase-3.0.0.jar=..\\..\\Downloads\\jar_files\\javase-3.0.0.jar
+file.reference.javax.mail.jar=..\\..\\Downloads\\javax.mail.jar
+file.reference.qrgen-1.4.jar=..\\..\\Downloads\\jar_files\\qrgen-1.4.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.qrgen-1.4.jar}:\
+    ${file.reference.core-3.0.0.jar}:\
+    ${file.reference.javase-3.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
