--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/hawes.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\Mezen Bayounes\\Desktop\\controlsfx-8.40.11.jar
 file.reference.javax.mail.jar=C:\\Users\\Mezen Bayounes\\Desktop\\javax.mail.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -38,7 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
