--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,20 +29,13 @@ dist.jar=${dist.dir}/HawesJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-collections4-4.1.jar=C:\\Users\\Yahya\\Downloads\\commons-collections4-4.1.jar
-file.reference.commons-collections4-4.1.jar-1=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\commons-collections4-4.1.jar
-file.reference.itextpdf-5.1.0.jar=C:\\Users\\Yahya\\Downloads\\itextpdf-5.1.0.jar
-file.reference.itextpdf-5.1.0.jar-1=C:\\Users\\Yahya\\Downloads\\Java apis\\itextpdf-5.1.0.jar
-file.reference.javax.mail.jar=C:\\Users\\Yahya\\Downloads\\javax.mail.jar
-file.reference.javax.mail.jar-1=C:\\Users\\Yahya\\Downloads\\Java apis\\javax.mail.jar
-file.reference.poi-3.17.jar=C:\\Users\\Yahya\\Downloads\\poi-3.17.jar
-file.reference.poi-3.17.jar-1=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\poi-3.17.jar
-file.reference.poi-ooxml-3.17.jar=C:\\Users\\Yahya\\Downloads\\poi-ooxml-3.17.jar
-file.reference.poi-ooxml-3.17.jar-1=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\poi-ooxml-3.17.jar
-file.reference.poi-ooxml-schemas-3.17.jar=C:\\Users\\Yahya\\Downloads\\poi-ooxml-schemas-3.17.jar
-file.reference.poi-ooxml-schemas-3.17.jar-1=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\poi-ooxml-schemas-3.17.jar
-file.reference.xmlbeans-2.6.0.jar=C:\\Users\\Yahya\\Downloads\\xmlbeans-2.6.0.jar
-file.reference.xmlbeans-2.6.0.jar-1=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\xmlbeans-2.6.0.jar
+file.reference.commons-collections4-4.1.jar=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\commons-collections4-4.1.jar
+file.reference.itextpdf-5.1.0.jar=C:\\Users\\Yahya\\Downloads\\Java apis\\itextpdf-5.1.0.jar
+file.reference.javax.mail.jar=C:\\Users\\Yahya\\Downloads\\Java apis\\javax.mail.jar
+file.reference.poi-3.17.jar=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\poi-3.17.jar
+file.reference.poi-ooxml-3.17.jar=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\poi-ooxml-schemas-3.17.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\Users\\Yahya\\Downloads\\Java apis\\Excel\\xmlbeans-2.6.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -51,23 +43,17 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.javax.mail.jar}:\
     ${file.reference.itextpdf-5.1.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.poi-3.17.jar}:\
     ${file.reference.poi-ooxml-3.17.jar}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.itextpdf-5.1.0.jar-1}:\
-    ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.commons-collections4-4.1.jar-1}:\
-    ${file.reference.poi-3.17.jar-1}:\
-    ${file.reference.poi-ooxml-3.17.jar-1}:\
-    ${file.reference.poi-ooxml-schemas-3.17.jar-1}:\
-    ${file.reference.xmlbeans-2.6.0.jar-1}
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -129,6 +115,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
