--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.controlsfx-8.40.11.jar=C:\\Users\\Mezen Bayounes\\Desktop\\controlsfx-8.40.11.jar
+file.reference.google-api-translate-java-0.97.jar=C:\\Users\\Mezen Bayounes\\Desktop\\google-api-translate-java-0.97.jar
 file.reference.javax.mail.jar=C:\\Users\\Mezen Bayounes\\Desktop\\javax.mail.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -40,7 +41,8 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.controlsfx-8.40.11.jar}
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.google-api-translate-java-0.97.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -83,7 +85,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=gui.Hawes
+javafx.main.class=GUI.Hawes
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
