ajout traytester.jar

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -98,6 +98,7 @@ file.reference.stax-api-1.0-2.jar=libraries\\Nouveau dossier\\stax-api-1.0-2.jar
 file.reference.stax-api-1.0.1.jar=libraries\\Nouveau dossier\\stax-api-1.0.1.jar
 file.reference.stripe-java-20.116.0.jar=..\\..\\..\\Downloads\\stripe-java-20.116.0.jar
 file.reference.TrayTester.jar=..\\..\\..\\Desktop\\eyaa\\jar eya\\TrayTester.jar
+file.reference.TrayTester.jar-1=libraries\\TrayTester.jar
 file.reference.twilio-8.29.1.jar=libraries\\twilio-8.29.1.jar
 file.reference.xmlbeans-2.6.0.jar=Java apis\\Excel\\xmlbeans-2.6.0.jar
 includes=**
@@ -176,7 +177,8 @@ javac.classpath=\
     ${file.reference.spring-expression-3.0.6.RELEASE.jar}:\
     ${file.reference.stax-1.2.0.jar}:\
     ${file.reference.stax-api-1.0-2.jar}:\
-    ${file.reference.stax-api-1.0.1.jar}
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.TrayTester.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
