Ajout stat pour cadeau mail pour participant formation et imprime ecran pour rando

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -107,19 +107,16 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.controlsfx-8.40.16.jar}:\
     ${file.reference.stripe-java-20.116.0.jar}:\
     ${file.reference.gson-2.8.2.jar}:\
     ${file.reference.jackson-annotations-2.13.2.jar}:\
     ${file.reference.jackson-core-2.13.2.jar}:\
-    ${file.reference.jackson-databind-2.13.2.2.jar}:\
     ${file.reference.twilio-8.29.1.jar}:\
     ${file.reference.httpclient-4.5.13.jar}:\
     ${file.reference.httpclient-cache-4.5.3.jar}:\
     ${file.reference.httpcore-4.4.5.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.jackson-datatype-jsr310-2.13.2.jar}:\
     ${file.reference.slf4j-api-2.0.0-alpha7.jar}:\
     ${file.reference.itextpdf-5.1.0.jar}:\
     ${file.reference.javax.mail.jar}:\
@@ -178,7 +175,10 @@ javac.classpath=\
     ${file.reference.stax-1.2.0.jar}:\
     ${file.reference.stax-api-1.0-2.jar}:\
     ${file.reference.stax-api-1.0.1.jar}:\
-    ${file.reference.TrayTester.jar-1}
+    ${file.reference.TrayTester.jar-1}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jackson-databind-2.13.2.2.jar}:\
+    ${file.reference.jackson-datatype-jsr310-2.13.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
